# project-accountable-justice-lab

./: .gitignore  Makefile  README.md  app.py  clean_solicitudes.py  conteo_ministros_sol.py  extraccion_completa_1.csv  main.py  mentions_timeseries.csv  mentions_viz.html  ngrams_data.csv  ngrams_datos.py  ngrams_solicitudes.py  pyproject.toml  salient_tokens_solicitudes.py  todos_los_ministros_timeseries.csv  viz_solicitudes.py
clean_output/: clean_solicitudes_2024.csv  clean_solicitudes_2025.csv
data/declaraciones/: compiled_all_quarters.xlsx  compiled_dataset_filtered.xlsx  q1_2024.xlsx
data/sentencias/: http_sentencias.py  sentencias_api.py  sentencias_historical.py  test_sentencias.py
data/tesis/: fetch_api_tesis.py  join_tesis.py  tesis_api.py  tesis_historical.py
data/viz_data/: ngrams_por_ministro.csv  (+2 more)
data_3/: branch_dani_test.py  compiled_all_quarters.xlsx  compiled_dataset.xlsx  compiled_dataset_con_remuneracion.xlsx  compiled_dataset_filtered.xlsx  compiled_dataset_filtrado.xlsx  final.xlsx  part0.py  part1.py  part1_clean_excel  part2.py  part2_pdf_text.py  part3.py  part3_remuneracion.py
data_3/pdf_text/: 10.txt  (+4 more)
exploratory/: app_test_mf.py  ngrams_solicitudes.py  viz_solicitudes.py
frontend/: 12 LGT_Art_70_Fr_XII_305_Parte_1.csv  app.py  app2.py  conteo_ministros_sol.py  test.py  viz_solicitudes.py
milestones/: final.md  milestone1.md  milestone2.md
output/: datos_generales.csv  educacion.csv
solicitudes/: solicitudes2025.JSON
src/: __main__.py
tests/: test_declaraciones.py  test_sentencias.py  test_solicitudes.py  test_tesis.py
(+2270 files in other folders)
