[project]
name = "project-accountable-justice-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "datetime>=6.0",
    "jellyfish>=1.2.1",
    "openpyxl>=3.1.5",
    "pandas<3",
    "pathlib>=1.0.1",
    "ruff>=0.15.5",
    "streamlit>=1.30",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "httpx>=0.28.1",
]
